--- a/app/index.html
+++ b/app/index.html
@@ -8,26 +8,67 @@
 </head>
 <body>
 <div class="container">
-    <div class="header">
+    <header>
         <div class="telephone">
             <a href="#"><img src="img/handset.png" alt="phone"></a>
             <span>(044)123-45-67 (044)567-89-10 </span>
 
         </div>
         <div class="Shape">
-        <form action="" method="Post">
-        <a href="#" ><img class="men" src="img/authorization.png" alt="men"></a>
-            <input type="text" name="name" placeholder="логин">
-            <input type="text" name="passvord" placeholder="пароль">
-            <ul class="ul_head">
-                <li><a href="#">вход</a></li>
-                <li><a href="#">регистрация</a></li>
-                <li><a href="#">забыли пароль?</a></li>
-            </ul>
-        </form>
-
+            <form action="" method="Post">
+                <img class="men" src="img/authorization.png" alt="men">
+                <input type="text" name="name" placeholder="логин">
+                <input type="text" name="passvord" placeholder="пароль">
+                <ul class="ul_head">
+                    <li class="left_li"><a href="#">вход</a></li>
+                    <li><a href="#">регистрация</a></li>
+                    <li class="right_li"><a href="#">забыли пароль?</a></li>
+                </ul>
+            </form>
         </div>
-    </div>
+        <div class="navi">
+            <a href="#"><img src="img/home.png" alt="home"/></a>
+            <a href="#"><img src="img/map.png" alt="home"/></a>
+            <a href="#"><img src="img/later.png" alt="home"/></a>
+        </div>
+        <img class="main_image" src="img/main.jpg" alt="main_image"/>
+        
+        <div class="main_menu">
+            <ul class="menu">
+                <li><a class='first_a' href="#">о компании</a></li>
+                <li><a class="litle" href="#">оплата</a></li>
+                <li><a href="#">доставка</a></li>
+                <li><a class="litle" href="#">статьи</a></li>
+                <li><a href="3">контакты</a></li>
+            </ul>
+
+            <div class="basket">
+                <a class="basket_img" href="#"><img src="img/basket.png" alt="phone"></a>
+                <ul>
+                    <li>на сумму: <span>0,00 грн.</span></li>
+                    <li>товаров:<span>0</span></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <section class="search">
+            <img src="img/discsAvto.jpg" alt="discsAvto"/>
+            <img class="findTires" src="img/findTires.jpg" alt="findTires"/>
+            <img class="findDisc" src="img/findDisc.jpg" alt="findDisc"/>
+    </section>
+    <nav class="katalog">
+        <div class="products">
+            <a href="#">каталог продукции:</a>
+        </div>
+
+    </nav>
+    <main></main>
+    <aside></aside>
+    <footer></footer>
+
+
+
+
 
 </div>
 
